infrastructure/ingress/banking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: banking-ingress
  namespace: default

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:

          # Grafana
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

          # API Gateway
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
